--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "18.2.0",
     "react-hook-form": "^7.50.1",
     "react-native": "0.73.4",
+    "react-native-maps": "^1.10.3",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "^0.19.10",
