--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
     "@expo/metro-runtime": "~3.1.3",
     "axios": "^1.6.7",
     "expo": "~50.0.8",
-    "expo-constants": "^15.4.5",
+    "expo-constants": "~15.4.5",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-hook-form": "^7.50.1",
     "react-native": "0.73.4",
-    "react-native-maps": "^1.10.3",
-    "react-native-safe-area-context": "^4.8.2",
+    "react-native-maps": "1.10.0",
+    "react-native-safe-area-context": "4.8.2",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-web": "^0.19.10",
+    "react-native-web": "~0.19.6",
     "toastify-react-native": "^5.0.0"
   },
   "devDependencies": {
